--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,9 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+&nbsp;
+&nbsp;
+&nbsp;
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
@@ -44,33 +46,31 @@
                 <option value ="news">news</option>
                 <option value ="media">media</option>
               </select>-->
+              
+
+                     <div  class="btn-group btn-group-toggle" data-toggle="buttons">
                    
-                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-secondary active">
+                  <label class="btn btn-primary active">
                     <input type="radio" name="options" id="option1" autocomplete="off" checked>Party
                   </label>
-                  <label class="btn btn-secondary">
+                  <label class="btn btn-primary">
                     <input type="radio" name="options" id="option2" autocomplete="off">Event
                   </label>
-                  <label class="btn btn-secondary">
+                  <label class="btn btn-primary">
                     <input type="radio" name="options" id="option3" autocomplete="off">Study
                   </label>
-                    <label class="btn btn-secondary">
+                    <label class="btn btn-primary">
                     <input type="radio" name="options" id="option3" autocomplete="off">Concert
                   </label>
                 </div>
                   </div>
-
                   <div class="form-group">
-              
                      <textarea class="form-control" id = "ip2" rows="1"placeholder="Title"></textarea><br>
                          <textarea class="form-control" id = "ip2" rows="7"placeholder="Description"></textarea>
-                  </div>
-                </form>
-                
-                <div class="modal-footer">
+                        </div>
+                      </form>
+                     <div class="modal-footer">
                   <button type="button" class="btn btn-primary">Create Event</button>
-                  
                 </div>
               </div>
             </div>
@@ -90,6 +90,7 @@
             
                     <div id='about-us'>
             <h1>Growing Together</h1>
+            &nbsp;
                 <p>This site was put together in late 2019 by a group of students from the East Coast area taking the "Advanced Web Technology course" originally designed to enteract with a database and allow people of like minded interests to connect with each other. </p><br>
                 <p>We are ecstatic to continue our learning journies in tech.</p> <br>
                 <p>Building this site has inspired us to push our abilities as developers to the next level! We hope it might help you find and share opportunities for inspiration, learning, growth, and for your community as well.</p><br>
@@ -97,7 +98,7 @@
         </div>
                         <div id='about-us'>
           
-              <!-- Hero -->
+              <!-- NAMES -->
   <section class="et-hero-tabs">
     <h1>MEET THE TEAM</h1>
     <h3>Take a look at the developers behind this project</h3>
@@ -125,27 +126,48 @@
     <section class="et-slide" id="tab-sg">
       <h1>Shabir Ghulam</h1>
       <h3>Software Architect</h3>
-      <p>A growing hacker focused on using SQL, JavaScript(Angular), HTML + CSS. When not designing, he can be found at high speeds and high mileage burnin' rubber! You can find Shabir on <a href="https://github.com/Sghulam22">Github</a>.</p>
+      <p>A growing hacker focused on using SQL, JavaScript(Angular), 
+      HTML + CSS. When not designing, he can be found at high speeds
+       and high mileage burnin' rubber! You can find Shabir on 
+       <a href="https://github.com/Sghulam22">Github</a>.</p>
     </section>
     <section class="et-slide" id="tab-ni">
       <h1>Nonso Iwu</h1>
       <h3>Vice President</h3>
-      <p>A respectable developer and artist who's focus in this project has been on the backend; creating events, features and implementing the functionality. Has demonstrated what can be accomplished through building custom, cross platform relational databases that grow and change over the years. He can be found on <a href = "https://github.com/nonsoiwu">Github</a>.</p>
+      <p>A respectable developer and artist who's focus in
+       this project has been on the backend; creating events, 
+       features and implementing the functionality. Has 
+       demonstrated what can be accomplished through 
+       building custom, cross platform relational databases 
+       that grow and change over the years. He can be found 
+       on <a href = "https://github.com/nonsoiwu">Github</a>.</p>
     </section>
     <section class="et-slide" id="tab-ar">
       <h1>Amaad Rafi</h1>
       <h3>Project Manager</h3>
-      <p>Has offered businesses and organizations top quality digital solutions at affordable prices. Loves coding, debugging, troubleshooting, designing and testing computer structures. He can be found on <a href="https://github.com/AmaadRafi">Github</a>.</p>
+      <p>Has offered businesses and organizations top quality
+       digital solutions at affordable prices. Loves coding, 
+       debugging, troubleshooting, designing and testing
+        computer structures. He can be found on 
+        <a href="https://github.com/AmaadRafi">Github</a>.</p>
     </section>
     <section class="et-slide" id="tab-tb">
       <h1>Toby Boyd</h1>
       <h3>Senior Technical Lead</h3>
-      <p>Enjoys working and learning with the team and has offered real time solutions to functionality and design improvements. Has focused on editing source-code and managing database systems. He can be found on <a href="https://github.com/tobiasalanboyd">Github</a>.</p>
+      <p>Enjoys working and learning with the team and has
+       offered real time solutions to functionality and
+        design improvements. Has focused on editing 
+        source-code and managing database systems.
+         He can be found on <a href="https://github.com/tobiasalanboyd">Github</a>.</p>
     </section>
       <section class="et-slide" id="tab-jb">
       <h1>Jason Burnell</h1>
       <h3>Software Engineer</h3>
-      <p>Hopes to become an excellent web develper and coder and to have a chance to bring his own experiences to the table. Primary focus has been on the front-end design of this project. Jason can be found on <a href="https://github.com/jasonburnell98">Github</a>.</p>
+      <p>Hopes to become an excellent web develper
+       and coder and to have a chance to bring his 
+       own experiences to the table. Primary focus 
+       has been on the front-end design of this 
+       project. Jason can be found on <a href="https://github.com/jasonburnell98">Github</a>.</p>
     </section>
   </main>
                
@@ -156,7 +178,7 @@
                     
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
             </div>
         </div>
     </div>
