--- a/ViBE-web-application/src/app/app.component.html
+++ b/ViBE-web-application/src/app/app.component.html
@@ -11,7 +11,7 @@
 
   <div id="test"></div>
   <div id="id_map">
-      <div id="overlay"></div>
+     <!-- <div id="overlay"></div> -->
       <app-map></app-map>
   </div>
 
