--- a/ViBE-web-application/src/app/components/splash-screen/splash-screen.component.css
+++ b/ViBE-web-application/src/app/components/splash-screen/splash-screen.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Quicksand');
+
 #Splash{
 
     position: fixed;
@@ -6,6 +8,7 @@
     height: 100%;
     z-index: 1;
 }
+
 #SplashBackground{
 
     position: relative;
@@ -15,15 +18,16 @@
     width: 100%;
     height: 100%;
     background-image: url("/assets/images/splash1v2.jpg");
-    object-fit: scale-down;
+    object-fit: contain;
     opacity: 100%;
-    filter: blur(10px) grayscale(20%);
+    filter: blur(5px) grayscale(35%);
     z-index: 2;
 }
+
 #LogoContainer{
     position: absolute;
-    height: 30vh;
-    width: 30vw;
+    height: 25vh;
+    width: 25vw;
     left: 48%;
     top: 25%;
     transform: translate(-50%, -50%);   
@@ -31,18 +35,26 @@
 }
 
 #modal-login {
+    display: none;
     position: absolute;
-    /* width: 500px;
-    height: 500px; */
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);   
-    z-index: 3;
     border-radius: 20px;
+    z-index: 3;
 }
 
+#enterAnimation {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+}
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Quicksand');
+#id-registerAlert {
+    display: none;
+}
 
 *{
     font-family: 'quicksand',Arial, Helvetica, sans-serif;
@@ -52,15 +64,18 @@
 body{
     background:#fff;
     height:100%;
+    width: 100%;
+    min-height: 100%;
 }
 
 img{
     max-width: 100%;
-    max-height: 100%;
+    max-height: auto;
     /* width: 350px;
     height: 350px; */
 }
 
+/* LOGIN / SIGNUP */
 .form-modal{
     position:relative;
     width:450px;
@@ -240,3 +255,74 @@ img{
         display: none!important;
     }
 }
+/* END LOGIN / SIGNUP */
+
+/* ENTER ANIMATION */
+.orangeBg {
+    background-color: #f0844e!important;
+    background-image: linear-gradient(90deg, #f0ad4e, #F79E62);
+    opacity: 80%;
+}
+.intro-banner-vdo-play-btn{
+    height:100px;
+    width:100px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    text-align:center;
+    margin:-50px 0 0 -50px;
+    border-radius:100px;
+    cursor: pointer;
+    z-index:1
+}
+.intro-banner-vdo-play-btn i{
+    line-height:95px;
+    font-size:15px;
+}
+.intro-banner-vdo-play-btn .ripple{
+    position:absolute;
+    width:160px;
+    height:160px;
+    z-index:-1;
+    left:50%;
+    top:50%;
+    opacity:0%;
+    margin:-80px 0 0 -80px;
+    border-radius:100px;
+    -webkit-animation:ripple 1.8s infinite;
+    animation:ripple 1.8s infinite
+}
+
+@-webkit-keyframes ripple{
+    0%{
+        opacity:1;
+        -webkit-transform:scale(0);
+        transform:scale(0)
+    }
+    100%{
+        opacity:0;
+        -webkit-transform:scale(1);
+        transform:scale(1)
+    }
+}
+@keyframes ripple{
+    0%{
+        opacity:1;
+        -webkit-transform:scale(0);
+        transform:scale(0)
+    }
+    100%{
+        opacity:0;
+        -webkit-transform:scale(1);
+        transform:scale(1)
+    }
+}
+.intro-banner-vdo-play-btn .ripple:nth-child(2){
+    animation-delay:.3s;
+    -webkit-animation-delay:.3s
+}
+.intro-banner-vdo-play-btn .ripple:nth-child(3){
+    animation-delay:.6s;
+    -webkit-animation-delay:.6s
+}
+/* END ENTER ANIMATION */
