trying to create side bar for events

--- a/ViBE-web-application/src/app/app.component.html
+++ b/ViBE-web-application/src/app/app.component.html
@@ -13,8 +13,10 @@
   <div id="id_map">
      <!-- <div id="overlay"></div> -->
       <app-map></app-map>
+      <app-events></app-events>
   </div>
 
 </div>
+
 
 <router-outlet></router-outlet>
