--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="testtt">
     <!-- <a class="navbar-brand text-warning" href="#">ViBE</a> -->
-    <img src ="/assets/images/ViBE_noSpace.png" id="id-vibeLogo" alt="vibeLogo.png">
+    <img src ="/assets/images/ViBE_noSpace.png" id="id-vibeLogo" alt="vibeLogo.png" (click)="dummy()">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
