--- a/ViBE-web-application/src/app/components/navbar/navbar.component.css
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,5 @@
+
+
 .custom-ting {
     background-color: #343A40;
 }
@@ -93,6 +95,45 @@
   .modal-content .about-modal-content {
     min-height: auto;
   }
+
+
+.Modal {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  padding-top: 100px;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-transition: 0.5s;
+  overflow: auto;
+  transition: all 0.3s linear;
+}
+
+.Modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border-radius: 4px;
+ max-width: 300px;
+
+  height: 450px;
+
+}
+.is-blurred {
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+
+.ModalOpen { overflow: hidden; }
+
+.is-hidden { display: none; }
+
+.is-visuallyHidden { opacity: 0; }
+
 
   #about-us {
     background-color: #343A40;
@@ -248,7 +289,7 @@ letter-spacing: 0.1rem;
 }
 .et-hero-tab:hover {
     color: #F0AD4E;
-background: #343A40;
+background: rgb(34, 86, 138);
     transition: all 0.5s ease;
 }
 
@@ -304,3 +345,5 @@ transition: left 0.3s ease;
     flex-direction: row;
     justify-content: center;
   }
+
+  
