--- a/ViBE-web-application/src/app/components/splash-screen/splash-screen.component.css
+++ b/ViBE-web-application/src/app/components/splash-screen/splash-screen.component.css
@@ -65,6 +65,7 @@ body{
     background:#fff;
     height:100%;
     width: 100%;
+    overflow: hidden;
     min-height: 100%;
 }
 
@@ -87,7 +88,18 @@ img{
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    box-shadow:0 3px 20px 0px rgba(0, 0, 0, 0.1)
+    box-shadow:0 3px 20px 0px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    
+    to {
+        opacity: 1;
+    }
 }
 
 .form-modal button{
