--- a/ViBE-web-application/src/app/components/navbar/navbar.component.css
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,4 @@
 
-
 .custom-ting {
     background-color: #343A40;
 }
@@ -13,7 +12,7 @@
   left: 50px;
   top: 100px;
 
-  overflow: auto; /* Enable scroll if needed */
+  overflow: hidden; /* Enable scroll if needed */
  
 }
 .modal-header {
@@ -93,44 +92,6 @@
   .modal-content .about-modal-content {
     min-height: auto;
   }
-
-
-.Modal {
-  display: block;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 9999;
-  width: 100%;
-  height: 100%;
-  padding-top: 100px;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.4);
-  -webkit-transition: 0.5s;
-  overflow: auto;
-  transition: all 0.3s linear;
-}
-
-.Modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border-radius: 4px;
- max-width: 300px;
-
-  height: 450px;
-
-}
-.is-blurred {
-  filter: blur(2px);
-  -webkit-filter: blur(2px);
-}
-
-.ModalOpen { overflow: hidden; }
-
-.is-hidden { display: none; }
-
-.is-visuallyHidden { opacity: 0; }
 
 
   #about-us {
@@ -267,12 +228,7 @@ width: 100%;
 height: 70px;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 background: white;
-z-index: 10;
-&--top {
-    position: fixed;
-    top: 0;
-}
-}
+z-index: 10;}
 
 .et-hero-tab {
 display: flex;
@@ -301,20 +257,7 @@ background: #66B1F1;
 transition: left 0.3s ease;
 }
 
-@media (min-width: 800px) {
-  .et-hero-tabs, .et-slide {
-    h1 {
-        font-size: 3rem;
-    }
-    
-    h3 {
-        font-size: 1rem;
-    }
-  }
-  .et-hero-tab {
-      font-size: 1rem;
-  }
-}
+
   
   /* visited link */
   a:visited {
