router, not done

--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -186,7 +186,7 @@
 
       <ul class="navbar-nav">
         <li class="nav-item">
-            <button class="btn btn-primary bg-dark text-warning" (click)="onClick_Logout()">Logout</button>
+            <button class="btn btn-primary bg-dark text-warning" (click)="onClick_Logout()" href="">Logout</button>
         </li>
       </ul>
     </div>
