--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -15,12 +15,12 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Party</a>
-            <a class="dropdown-item" href="#">Event</a>
-            <a class="dropdown-item" href="#">Study</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Concert</a>
-          </div>
+              <a class="dropdown-item" href="#" (click)="getParty()">Party</a>
+              <a class="dropdown-item" href="#" (click)="getFundraiser()">Fundraiser</a>
+              <a class="dropdown-item" href="#" (click)="getSports()">Sports</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" (click)="getConcert()">Concert</a>
+            </div>
         </li>
 
         <!--CREATE EVENT BUTTON-->
