--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -12,17 +12,8 @@
   <!--Categories-->
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
-          <div class="dropdown-menu">
-              <a class="dropdown-item" href="#" (click)="getParty()">Party</a>
-              <a class="dropdown-item" href="#" (click)="getFundraiser()">Fundraiser</a>
-              <a class="dropdown-item" href="#" (click)="getSports()">Sports</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#" (click)="getConcert()">Concert</a>
-            </div>
-        </li>
-
+      
+        <app-events></app-events>
         <!--CREATE EVENT BUTTON-->
         <li class="nav-item">
           <a class="nav-link text-warning" href="#"onclick="document.getElementById('modal-create').style.display='block';">Create Event</a>
