--- a/ViBE-web-application/src/app/components/navbar/navbar.component.css
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.css
@@ -316,3 +316,7 @@ transition: left 0.3s ease;
 .vibeButton:active:hover{
     color: #F0AD4E;
 }
+.pac-container {
+  z-index: 99999999999 !important;
+  margin-top: -210px;
+}
