--- a/ViBE-web-application/src/app/components/splash-screen/splash-screen.component.css
+++ b/ViBE-web-application/src/app/components/splash-screen/splash-screen.component.css
@@ -23,6 +23,7 @@
     width: 100%;
     height: 100%;
     background-image: url("/assets/images/splash1v2.jpg");
+    background-size: contain;
     object-fit: contain;
     opacity: 100%;
     filter: blur(5px) grayscale(35%);
