--- a/ViBE-web-application/src/app/components/navbar/navbar.component.html
+++ b/ViBE-web-application/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <app-events></app-events>
         <!--CREATE EVENT BUTTON-->
         <li class="nav-item">
-          <a class="nav-link text-warning" href="#"onclick="document.getElementById('modal-create').style.display='block';">Create Event</a>
+          <a class="nav-link text-warning" href="#" (click)="onClick_EventBtn()">Create Event</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-warning" href="#myModal" data-toggle="modal">About</a>
