--- a/ViBE-web-application/src/app/components/events/events.component.html
+++ b/ViBE-web-application/src/app/components/events/events.component.html
@@ -41,7 +41,7 @@
             <div class="form-group">
                 <input type="text" id="locationAutoComplete" class="form-control rounded orange" placeholder="Location" [(ngModel)]="location" [ngModelOptions]="{standalone: true}"><br>
                 <input type = "text" class="form-control rounded orange" id = "title" rows="1"placeholder="Title" [(ngModel)]="title" [ngModelOptions]="{standalone: true}"><br>
-                <textarea class="form-control rounded orange" id = "Description" rows="7"placeholder="Description" [(ngModel)]="desc" [ngModelOptions]="{standalone: true}"></textarea>
+                <textarea class="form-control rounded orange" id = "description" rows="7"placeholder="Description" [(ngModel)]="desc" [ngModelOptions]="{standalone: true}"></textarea>
                   </div>
                 </form>
                <div class="modal-footer">
